# ecstore

./: README.md
baselines/HElibDB/: CMakeLists.txt  main.cpp
baselines/KV_wiredtiger/server/: CMakeLists.txt
baselines/mysql/: CMakeLists.txt  client  client.cpp
baselines/mysql1/: CMakeLists.txt  client.cpp
crypto/OPE/: main.cpp
main/HoTEE_WiredTiger/client/: client.cpp
main/HoTEE_WiredTiger/server/: server.cpp
scripts/baselines/HElibDB/: gen.py
scripts/cryptdb/: test_script.py
scripts/range_search/: script_hotee.py
src/range_search/HoTEE_WiredTiger/client/: CMakeLists.txt  client.cpp
src/range_search/HoTEE_WiredTiger/server/: server.cpp
src/range_search/Ptxt_WiredTiger/client/: client.cpp
src/range_search/Ptxt_WiredTiger/server/: server.cpp
